force-app/main/default/objects/User_Playlist__c/User_Playlist__c.object-meta.xml
<CustomObject>
    <label>User_Playlist</label>
    <nameField>
        <label>User_Playlist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User_Playlists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>