force-app/main/default/objects/User_Playlist__c/fields/Cant_Songs__c.field-meta.xml
<CustomField>
    <fullName>Cant_Songs__c</fullName>
    <label>Cant_Songs</label>
    <summaryForeignKey>Playlist_Song__c.User_Playlist_Id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>