force-app/main/default/objects/User_Playlist__c/fields/Is_Public__c.field-meta.xml
<CustomField>
    <fullName>Is_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Public</label>
    <type>Checkbox</type>
</CustomField>