force-app/main/default/objects/User_Playlist__c/fields/Play_Time__c.field-meta.xml
<CustomField>
    <fullName>Play_Time__c</fullName>
    <label>Play Time</label>
    <summarizedField>Playlist_Song__c.Duration_Seg__c</summarizedField>
    <summaryForeignKey>Playlist_Song__c.User_Playlist_Id__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>