force-app/main/default/objects/User_Playlist__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>User_Playlists</relationshipLabel>
    <relationshipName>User_Playlists</relationshipName>
    <type>Lookup</type>
</CustomField>